--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             </p>
                             <br>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000">Obtenlo ahora</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://varuta-c3908.web.app/';">Obtenlo ahora</button>
                             </div>
                         </div>
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
