--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tarifa fija</h5>
                                 <p class="card-text">No te limites, envia sin restricciones tus mercaderias por nuestra aplicación y solo pagas una cuota fija mensual.</p>
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #FF8000">Elegir</button>
+                                <button type="button"  class="btn btn-dark btn-lg btn-block active" style="background-color: #FF8000">Elegir</button>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                             . Tendiendo puentes con la finalidad de brindar información de los envios.
                         </p>
                         <div class="col-sm text-center">
-                            <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" >Obtenlo ahora</button>
+                            <button type="button" onclick="location.href='https://varuta-c3908.web.app/';" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" >Obtenlo ahora</button>
                         </div>
     
                     </div>
