--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <a class="nav-link" href="#nosotros">Nosotros</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#Video">Video</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="https://varuta-c3908.web.app/" target="_blank">CallToAction</a>
                     </li>
                 </ul>
@@ -167,11 +170,14 @@
     
                     </div>
                     <div class="col-auto col-md-8 text-right pr-0 pl-0">
-                        <img src="img/A.jpg" class="img-fluid" alt="Responsive image" style="min-height:100vh;">
+                        <video src="PresentacionEquipo.mp4" width="640" height="480"></video>
                     </div>
                 </div>
             </div>
         </seccion>
+
+
+
     </main>
     <footer class="footer" style="background-color: #000000">
         <div class="container text-center" >
