--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #ff7e00;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #8D11F0;">
             <a class="navbar-brand" href="#inicio">VaRuta</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
