--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #8D11F0;">
-            <a class="navbar-brand" href="#inicio">VaRuta</a>
+            <a class="navbar-brand text-white" href="#inicio">VaRuta</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#inicio">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-white" href="#inicio">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#beneficios">Beneficios</a>
+                        <a class="nav-link text-white" href="#beneficios">Beneficios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#funcionamiento">Funcionamiento</a>
+                        <a class="nav-link text-white" href="#funcionamiento">Funcionamiento</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#planes">Planes</a>
+                        <a class="nav-link text-white" href="#planes">Planes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#nosotros">Nosotros</a>
+                        <a class="nav-link text-white" href="#nosotros">Nosotros</a>
                     </li>
  
                     <li class="nav-item">
-                        <a class="nav-link" href="#Terminos" >Terminos y Condiciones</a>
+                        <a class="nav-link text-white" href="#Terminos" >Terminos y Condiciones</a>
                     </li>
                 </ul>
             </div>
