--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #8D11F0;">
-            <a class="navbar-brand text-white" href="#inicio">VaRuta</a>
+            <a class="navbar-brand text-white" href="#inicio">SoftRoute</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
