--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                         <div class="col-sm " >
                             <h2 class="" id="register">Registra tus envíos</h2><br>
                             <p class="" >
-                                Conoce el estado de tus envíos de mercaderia a nivel nacional, desde las diferentes empresas de transporte y en
-                                cualquier monento desde nuestra APP.
-                                Ten siempre la información en tus manos de tus envios.
+                                ¡Bienvenido a nuestra aplicación! Con ella, podrás rastrear tus envíos de paquetes en tiempo real y mantener un control total sobre tus entregas
                             </p>
                             <br>
                             <div class="col-sm text-center" >
