--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container-fluid  mt-5" style=" min-height:100vh; background: #fafbfd ;">
                     <div class="row text-center align-items-center" style="min-height:90vh;">
                         <div class="col-sm " >
-                            <h2 class="" id="register">Registra tus envíos</h2><br>
+                            <h2 class="" id="register">SOFTROUTE APP</h2><br>
                             <p class="" >
                                 ¡Bienvenido a nuestra aplicación! Con ella, podrás rastrear tus envíos de paquetes en tiempo real y mantener un control total sobre tus entregas
                             </p>
