--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </p>
                             <br>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://varuta-c3908.web.app/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descárgalo ahora!</button>
                             </div>
                         </div>
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
@@ -76,7 +76,7 @@
                                 <p class="card-text">Nuestra aplicación es usado por la mayoria de empresas de transporte de mercaderia a nivel nacional </p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://varuta-c3908.web.app/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descárgalo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                                 <p class="card-text">Puedes consultar el estado de envío de los diferentes envios que haces en diferentes empresas de transporte</p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://varuta-c3908.web.app/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Obtenlo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                 <p class="card-text">Registra las mercaderias que envias y entregas de tus diferentes clientes desde nuestra aplicación VaRuta</p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://varuta-c3908.web.app/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descubrelo ahora!</button>
                             </div>
                         </div>
                     </div>
