--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </p>
                             <br>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; target='_blank'">Descárgalo ahora!</button>
                             </div>
                         </div>
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
