--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                             </div>
                         </div>
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
-                            <img src="img/1.png"  class="img-fluid" alt="Responsive image" style="min-height:100vh;">
+                           <!-- <img src="img/1.png"  class="img-fluid" alt="Responsive image" style="min-height:100vh;"> -->
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=BLq7h1N8iGw" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
             </div>
