--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </p>
                             <br>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; target='_blank'">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; '_blank'">Descárgalo ahora!</button>
                             </div>
                         </div>
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
@@ -79,7 +79,7 @@
                                 <p class="card-text">Nuestra aplicación es usado por la mayoria de empresas de transporte de mercaderia a nivel nacional </p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank'">Descárgalo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                                 <p class="card-text">Puedes consultar el estado de envío de los diferentes envios que haces en diferentes empresas de transporte</p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Obtenlo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank' ">Obtenlo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                                 <p class="card-text">Registra las mercaderias que envias y entregas de tus diferentes clientes desde nuestra aplicación VaRuta</p>                                
                             </div>
                             <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descubrelo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank'">Descubrelo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                         </ul>
                         
                         <div class="col-sm text-center" >
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Obtenlo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank'">Obtenlo ahora!</button>
                         </div>
                     </div>
                     <div class="col-auto col-md-8 text-right pr-0 pl-0">
@@ -144,7 +144,7 @@
                                 <p class="card-text">Ten el control de tus costos,
                                     solo pagas por los envíos que vas a realizar en nuestra aplicación sin cuotas a fin de mes.
                                 </p>
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Obtenlo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank'">Obtenlo ahora!</button>
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tarifa fija</h5>
                                 <p class="card-text">No te limites, envia sin restricciones tus mercaderias por nuestra aplicación y solo pagas una cuota fija mensual.</p>
-                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/';">Descárgalo ahora!</button>
+                                <button type="button" class="btn btn-dark btn-lg btn-block active" style="background-color: #000000" onclick="location.href='https://play.google.com/'; ; '_blank'">Descárgalo ahora!</button>
                             </div>
                         </div>
                     </div>
