--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="col-auto col-md-8 text-right pr-0 pl-0">
                            <!-- <img src="img/1.png"  class="img-fluid" alt="Responsive image" style="min-height:100vh;"> -->
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/BLq7h1N8iGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe src="https://www.youtube.com/embed/BLq7h1N8iGw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
